using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string hasTarget = "hasTarget";
    internal static string canMove = "canMove";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";

    internal static string lockVelocity = "lockVelocity";
    internal static string hitTrigger = "hit";
}

